--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Telegram API credentials
-API_ID=25028868
-API_HASH=5b1fef5b5bed17011c82e4c19906cf19
-PHONE=+79381586926
-LOGIN=tstacc123
+API_ID=25292614
+API_HASH=33da2ba1bf6675a5d67cefd8923af019
+PHONE=+79295631086
+LOGIN=tsttst11
 # Target account to forward messages to
 TARGET_USERNAME=-1002682439461
